# world_cup_predictor

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/: recent_form_model_features.json
scripts/: audit_elo_sources.py  audit_golden_boot_coverage.py  audit_missing_squad_player_stats.py  audit_player_source_coverage.py  audit_squad_stat_matching.py  audit_world_cup_squad_coverage.py  backtest_recent_form_model.py  backtest_strength_baseline.py  compare_backtest_baselines.py  compare_group_stage_models.py  compare_stage1_models.py  convert_fbref_copy_to_csv.py  inspect_club_player_data.py  make_game_predictions.py  make_model_comparison_report.py  make_stage1_plots.py  merge_fbref_standard_shooting.py  predict_2026_fixtures_recent_form.py  print_top_predictions.py  prioritize_missing_attacking_stats.py  run_golden_boot_baseline.py  run_group_simulation.py  run_group_stage_probabilities.py  run_group_stage_simulation.py  run_knockout_predictions.py  run_pipeline.py  run_placeholder_matches.py  run_recent_form_group_stage_probabilities.py  run_stage.py  run_stage1_predictions.py  run_winner_baseline.py  summarize_golden_boot_pool.py  summarize_historical_data.py  summarize_match_features.py  summarize_player_scoring_features.py  train_recent_form_model.py  validate_historical_data.py  validate_raw_data.py
src/data/: apply_squad_player_mapping.py  build_fixture_features.py  build_golden_boot_pool.py  build_historical_matches.py  build_match_features.py  build_player_scoring_features.py  collect_elo.py  (+14 more)
world_cup_predictor.egg-info/: PKG-INFO  SOURCES.txt
(+19 files in other folders)
